--- a/index.html
+++ b/index.html
@@ -35,39 +35,39 @@
                 </a>
             </div>
             <div class="bookmark">
-                <div class="service">
-                    <button class="dpe">예배</button>
-                    <div class="dpce">
+                <div class="service a">
+                    <button class="dpe c">예배</button>
+                    <div class="dpce b">
                         <a href="#"> 라이브 </a>
                     </div> 
                 </div>
-                <div class="strive">
-                    <button class="dpt">성장</button>
-                    <div class="dpct">
+                <div class="strive a">
+                    <button class="dpt c">성장</button>
+                    <div class="dpct b">
                         <a href="#"> ㅇㅅㅇ </a>
                     </div> 
                 </div>
-                <div class="info">
-                    <button class="dpn">자료</button>
-                    <div class="dpcn">
+                <div class="info a">
+                    <button class="dpn c">자료</button>
+                    <div class="dpcn b">
                         <a href="#"> 설교 원고 </a>
                     </div> 
                 </div>
-                <div class="communication">
-                    <button class="dpo">소통</button>
-                    <div class="dpco">
+                <div class="communication a">
+                    <button class="dpo c">소통</button>
+                    <div class="dpco b">
                         <a href="#"> 커뮤니티 </a>
                     </div> 
                 </div>
-                <div class="church">
-                    <button class="dph">교회</button>
-                    <div class="dpch">
+                <div class="church a">
+                    <button class="dph c">교회</button>
+                    <div class="dpch b">
                         <a href="#"> 신념 </a>
                     </div> 
                 </div>
-                <div class="education">
-                    <button class="dpd">교육</button>
-                    <div class="dpcd">
+                <div class="education a">
+                    <button class="dpd c">교육</button>
+                    <div class="dpcd b">
                         <a href="#"> 중고등부 </a>
                     </div> 
                 </div>
