updated setting on layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; width: 100%;">
     <head>
         <title>김해시민교회</title>
         <meta charset="UTF-8">
