--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h3>SNS</h3>
                         <ul>
                             <li>
-                                <a href="#" target="_blank" title="youtube">
+                                <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" target="_blank" title="youtube">
                                     <img src="img/youtube.svg">
                                 </a>
                             </li>
