--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="top-header">
                 <div class="inner">
                     <div class="inner-left">
-                        <a href="#">예배시간</a>
+                        <a href="#">예배안내</a>
                         <a href="#">오시는 길</a>
                         <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
                     </div>
@@ -39,6 +39,7 @@
                     <button class="dpe c">예배</button>
                     <div class="dpce b">
                         <a href="#"> 라이브 </a>
+                        <a href="#"> 예배안내 </a>
                     </div> 
                 </div>
                 <div class="strive a">
@@ -63,6 +64,7 @@
                     <button class="dph c">교회</button>
                     <div class="dpch b">
                         <a href="#"> 신념 </a>
+                        <a href="#"> 오시는 길 </a>
                     </div> 
                 </div>
                 <div class="education a">
