--- a/index.html
+++ b/index.html
@@ -35,41 +35,41 @@
                 </a>
             </div>
             <div class="bookmark">
-                <div class="service a">
-                    <button class="dpe c">예배</button>
-                    <div class="dpce b">
+                <div class="service A">
+                    <button class="dpe C">예배</button>
+                    <div class="dpce B">
                         <a href="#"> 라이브 </a>
                         <a href="#"> 예배안내 </a>
                     </div> 
                 </div>
-                <div class="strive a">
-                    <button class="dpt c">성장</button>
-                    <div class="dpct b">
+                <div class="strive A">
+                    <button class="dpt C">성장</button>
+                    <div class="dpct B">
                         <a href="#"> ㅇㅅㅇ </a>
                     </div> 
                 </div>
-                <div class="info a">
-                    <button class="dpn c">자료</button>
-                    <div class="dpcn b">
+                <div class="info A">
+                    <button class="dpn C">자료</button>
+                    <div class="dpcn B">
                         <a href="#"> 설교 원고 </a>
                     </div> 
                 </div>
-                <div class="communication a">
-                    <button class="dpo c">소통</button>
-                    <div class="dpco b">
+                <div class="communication A">
+                    <button class="dpo C">소통</button>
+                    <div class="dpco B">
                         <a href="#"> 커뮤니티 </a>
                     </div> 
                 </div>
-                <div class="church a">
-                    <button class="dph c">교회</button>
-                    <div class="dpch b">
+                <div class="church A">
+                    <button class="dph C">교회</button>
+                    <div class="dpch B">
                         <a href="#"> 신념 </a>
                         <a href="#"> 오시는 길 </a>
                     </div> 
                 </div>
-                <div class="education a">
-                    <button class="dpd c">교육</button>
-                    <div class="dpcd b">
+                <div class="education A">
+                    <button class="dpd C">교육</button>
+                    <div class="dpcd B">
                         <a href="#"> 중고등부 </a>
                     </div> 
                 </div>
