--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -3,7 +3,7 @@
     <head>
         <title>김해시민교회</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Church_Website/style.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="hoverabledwr.js"></script>
     </head>
