--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -86,15 +86,17 @@
             <br>
             <div class="SundayTime">
                 <h2>일요일</h2>
-                <h3>주일학교</h3>
-                9:00 ~ 10:00 AM
-                <h3>오전예배</h3>
-                11:00 ~ 12:00 PM *
-                <h3>오후예배</h3>
-                2:00 ~ 3:00 PM *
-                <h3>중고등부 성경공부</h3>
-                6:00 (?)
-                <p2>*예배 30분 전부터 준비 찬송합니다.*</p2>
+                <ul>
+                <li><h3>주일학교</h3>
+                9:00 ~ 10:00 AM</li>
+                <li><h3>오전예배</h3>
+                11:00 ~ 12:00 PM *</li>
+                <li><h3>오후예배</h3>
+                2:00 ~ 3:00 PM *</li>
+                <li><h3>중고등부 성경공부</h3>
+                6:00 (?)</li>
+                </ul>
+                <p><p2>*예배 30분 전부터 준비 찬송합니다.*</p2></p>
             </div>
             <div class="WednesdayTime">
                 <h2>수요일</h2>
