--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -100,9 +100,13 @@
             </div>
             <div class="WednesdayTime">
                 <h2>수요일</h2>
+                <h3>수요기도회</h3>
+                7:00 ~ 8:00 PM
             </div>
             <div class="DayBreakTime">
-                <h2>새벽기도회</h2>
+                <h2>평일 새벽</h2>
+                <h3>새벽기도회</h3>
+                5:30 AM  
             </div>
         </main>
 
