--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -100,15 +100,19 @@
             </div>
             <br>
             <div class="WednesdayTime">
-                <h2>수요일</h2>
-                <h3>수요기도회</h3>
+                <ul>
+                <li><h2>수요일</h2>
+                <h3>수요기도회</h3></li>
                 7:00 ~ 8:00 PM
+                </ul>
             </div>
             <br>
             <div class="DayBreakTime">
-                <h2>평일 새벽</h2>
-                <h3>새벽기도회</h3>
+                <ul>
+                <li><h2>평일 새벽</h2>
+                <h3>새벽기도회</h3></li>
                 5:30 AM  
+                </ul>
             </div>
         </main>
 
