--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -14,7 +14,7 @@
             <div class="top-header">
                 <div class="inner">
                     <div class="inner-left">
-                        <a href="Worship/Worship-guide">예배안내</a>
+                        <a href="Worship/Worship-guide.html">예배안내</a>
                         <a href="#">오시는 길</a>
                         <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
                     </div>
