--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -96,7 +96,7 @@
                 <li><h3>중고등부 성경공부</h3>
                 6:00 (?)</li>
                 </ul>
-                <p><p4>*예배 30분 전부터 준비 찬송합니다.*</p4></p>
+                <p style="font-size: 4px;">*예배 30분 전부터 준비 찬송합니다.*</p>
             </div>
             <br>
             <div class="WednesdayTime">
