--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <!-- Header -->
-        <script src="pageView.js">Write.Header()</script>
+        Write.Header();
         
         <div>
             <p>
@@ -21,7 +21,7 @@
 
             
         <!-- footer -->
-        <script src="pageView.js">Write.Footer()</script>
+        Write.Footer();
 
     </body>
 </html>
