--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="footC">
-                ⓒ KL corp. All rights reserved.
+                ⓒ KL corp. All rights are not reserved. :P
             </div>
         </footer>
 
