--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
 
         <!-- Header -->
-        Write.Header();
+        <script>Write.Header();</script>
         
         <div>
             <p>
@@ -21,7 +21,7 @@
 
             
         <!-- footer -->
-        Write.Footer();
+        <script>Write.Footer();</script>
 
     </body>
 </html>
