--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -192,9 +192,9 @@
                 </div>
             </div>
             <div class="footC">
-                ⓒ KL corp. All rights are not reserved. :P
+                ⓒ KL corp. All rights are reserved.
             </div>
         </footer>
-
+        Bruh.
     </body>
 </html>
