--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="hoverabledwr.js"></script>
+        <script src="pageView.js"></script>
     </head>
     <body>
 
