--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html style="height: 100%; width: 100%;">
     <head>
-        <title>김해시민교회</title>
+        <title>예배안내 - 김해시민교회</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
         <link rel="icon" href="img/logo_head.svg">
-        <script src="hoverabledwr.js"></script>
-        <script src="pageView.js"></script>
+        <script src="../pageView.js"></script>
     </head>
     <body>
 
@@ -67,6 +66,5 @@
             
         <!-- footer -->
         <script>Write.Footer();</script>
-        Bruh.
     </body>
 </html>
