--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="inner">
                     <div class="inner-left">
                         <a href="https://gimhaesimin.netlify.app/worship/worship-guide">예배안내</a>
-                        <a href="#">오시는 길</a><a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
+                        <a href="https://gimhaesimin.netlify.app/curch/map">오시는 길</a><a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
                     </div>
                     <div class="inner-right">
                         <a href="#">로그인</a>
