--- a/church/map.html
+++ b/church/map.html
@@ -34,6 +34,31 @@
                     "mapHeight" : "360"
                 }).render();
             </script>
+
+            <div class="bus_route">
+                <ul>
+                    <li>
+                        부영2차 아파트(1435 | 코아상가 방면)
+                        <br>
+                        13, 15, 22, 24, 26, 44
+                    </li>
+                    <li>
+                        부영2차 아파트(1369 | 갑을장유병원 방면)
+                        <br>
+                        13, 15, 22, 24, 25, 44
+                    </li>
+                    <li>
+                        대동2단지(630199, 1272 | 장유고등학교 방면)
+                        <br>
+                        23, 770
+                    </li>
+                    <li>
+                        대동2단지(2789 | 코아상가 방면)
+                        <br>
+                        23
+                    </li>
+                </ul>
+            </div>
         </main>
 
    
