--- a/church/map.html
+++ b/church/map.html
@@ -15,6 +15,9 @@
 
         <!-- Main Info -->
         <main>
+
+            <h2>오시는 길</h2>
+
             <!-- * 카카오맵 - 지도퍼가기 -->
             <!-- 1. 지도 노드 -->
             <div id="daumRoughmapContainer1707545075097" class="root_daum_roughmap root_daum_roughmap_landing"></div>
