--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -16,38 +16,50 @@
         <!-- Main Info -->
         <main>
             <div class="WorshipTimetable">
-            <h1>예배안내</h1>
+            <h2>예배안내</h2>
             </div>
             <br>
             <br>
             <div class="SundayTime">
-                <h2>일요일</h2>
+                <h3>일요일</h3>
                 <ul>
-                <li><h3>주일학교</h3>
-                9:00 ~ 10:00 AM</li>
-                <li><h3>오전예배</h3>
-                11:00 ~ 12:00 PM *</li>
-                <li><h3>오후예배</h3>
-                2:00 ~ 3:00 PM *</li>
-                <li><h3>중고등부 성경공부</h3>
-                6:00 (?)</li>
+                    <li>
+                        <h4>주일학교</h4>
+                        9:00 ~ 10:00 AM
+                    </li>
+                    <li>
+                        <h4>오전예배</h4>
+                        11:00 ~ 12:00 PM *
+                    </li>
+                    <li>
+                        <h4>오후예배</h4>
+                        2:00 ~ 3:00 PM *
+                    </li>
+                    <li>
+                        <h4>중고등부 성경공부</h4>
+                        6:00 (?)
+                    </li>
                 </ul>
                 <p style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</p>
             </div>
             <br>
             <div class="WednesdayTime">
                 <ul>
-                <h2>수요일</h2>
-                <li><h3>수요기도회</h3></li>
-                7:00 ~ 8:00 PM
+                <h3>수요일</h3>
+                <li>
+                    <h4>수요기도회</h4>
+                    7:00 ~ 8:00 PM
+                </li>
                 </ul>
             </div>
             <br>
             <div class="DayBreakTime">
                 <ul>
-                <h2>평일 새벽</h2>
-                <li><h3>새벽기도회</h3></li>
-                5:30 AM  
+                <h3>평일 새벽</h3>
+                <li>
+                    <h4>새벽기도회</h4>
+                    5:30 AM  
+                </li>
                 </ul>
             </div>
         </main>
