--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <br>
                         연락처: 055-323-0691
                         <br>
-                        <a href="https://gimhaesimin.netlify.app/index.html">나중에 주소 만들면</a>
+                        <a href="https://gimhaesimin.netlify.app/">https://gimhaesimin.netlify.app/</a>
                     </p>
                     <nav class="footD">
                         <h3>SNS</h3>
