--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="service A">
                     <button class="dpe C">예배</button>
                     <div class="dpce B">
-                        <a href="#"> 라이브 <br></a>
+                        <a href="#"> 라이브 </a>
                         <a href="#"> 예배안내 </a>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="church A">
                     <button class="dph C">교회</button>
                     <div class="dpch B">
-                        <a href="#"> 신념 <br></a>
+                        <a href="#"> 신념 </a>
                         <a href="#"> 오시는 길 </a>
                     </div>
                 </div>
