--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="dpe C">예배</button>
                     <div class="dpce B">
                         <a href="#"> 라이브 </a>
-                        <a href="#"> 예배안내 </a>
+                        <a href="https://gimhaesimin.netlify.app/worship/worship-guide"> 예배안내 </a>
                     </div>
                 </div>
                 <div class="strive A">
@@ -61,7 +61,7 @@
                     <button class="dph C">교회</button>
                     <div class="dpch B">
                         <a href="#"> 신념 </a>
-                        <a href="#"> 오시는 길 </a>
+                        <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
                     </div>
                 </div>
                 <div class="education A">
