--- a/church/map.html
+++ b/church/map.html
@@ -4,6 +4,7 @@
         <title>오시는 길 - 김해시민교회</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="style_map.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
     </head>
