--- a/church/map.html
+++ b/church/map.html
@@ -23,7 +23,8 @@
             <br>
             <!-- * 카카오맵 - 지도퍼가기 -->
             <!-- 1. 지도 노드 -->
-            <div id="daumRoughmapContainer1707545075097" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+            <div class="row">
+            <div id="daumRoughmapContainer1707545075097" class="root_daum_roughmap root_daum_roughmap_landing column"></div>
 
             <!--
                 2. 설치 스크립트
@@ -41,7 +42,7 @@
                 }).render();
             </script>
 
-            <div class="bus_route">
+            <div class="bus_route column">
                 <ul>
                     <li>
                         부영2차 아파트(1435 | 코아상가 방면)
@@ -64,6 +65,7 @@
                         23
                     </li>
                 </ul>
+            </div>
             </div>
         </main>
 
