--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
                     <img src="img/logo_header.svg">
                 </a>
             </div>
-            <div class="bookmark">
-                <div class="service A">
-                    <button class="dpe C">예배</button>
-                    <div class="dpce B">
+            <div class="navbar">
+                <div class="dropdown service">
+                    <button class="dropbtn">예배</button>
+                    <div class="dropdown_content">
                         <a href="#"> 라이브 </a>
                         <a href="https://gimhaesimin.netlify.app/worship/worship-guide"> 예배안내 </a>
                     </div>
                 </div>
-                <div class="strive A">
-                    <button class="dpt C">성장</button>
-                    <div class="dpct B">
+                <div class="dropdown strive">
+                    <button class="dropbtn">성장</button>
+                    <div class="dropdown_content">
                         <a href="#"> ㅇㅅㅇ </a>
                     </div>
                 </div>
-                <div class="info A">
-                    <button class="dpn C">자료</button>
-                    <div class="dpcn B">
+                <div class="dropdown info">
+                    <button class="dropbtn">자료</button>
+                    <div class="dropdown_content">
                         <a href="#"> 설교 원고 </a>
                     </div>
                 </div>
-                <div class="communication A">
-                    <button class="dpo C">소통</button>
-                    <div class="dpco B">
+                <div class="dropdown communication">
+                    <button class="dropbtn">소통</button>
+                    <div class="dropdown_content">
                         <a href="#"> 커뮤니티 </a>
                     </div>
                 </div>
-                <div class="church A">
-                    <button class="dph C">교회</button>
-                    <div class="dpch B">
+                <div class="dropdown church">
+                    <button class="dropbtn">교회</button>
+                    <div class="dropdown_content">
                         <a href="#"> 신념 </a>
                         <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
                     </div>
                 </div>
-                <div class="education A">
-                    <button class="dpd C">교육</button>
-                    <div class="dpcd B">
+                <div class="dropdown education">
+                    <button class="dropbtn">교육</button>
+                    <div class="dropdown_content">
                         <a href="#"> 중고등부 </a>
                     </div>
                 </div>
