--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -20,7 +20,8 @@
             </div>
             <br>
             <br>
-            <div class="SundayTime">
+            <div class="TimeRow">
+            <div class="SundayTime Column1">
                 <ul>
                     <h3>일요일</h3>            
                     <li>
@@ -43,7 +44,7 @@
                 <p style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</p>
             </div>
             <br>
-            <div class="WednesdayTime">
+            <div class="WednesdayTime Column2">
                 <ul>
                 <h3>수요일</h3>
                 <li>
@@ -53,7 +54,7 @@
                 </ul>
             </div>
             <br>
-            <div class="DayBreakTime">
+            <div class="DayBreakTime Column2">
                 <ul>
                 <h3>평일 새벽</h3>
                 <li>
@@ -61,6 +62,7 @@
                     5:30 AM  
                 </li>
                 </ul>
+            </div>
             </div>
         </main>
 
