--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -21,7 +21,8 @@
             <br>
             <br>
             <div class="TimeRow">
-            <div class="SundayTime Column1">
+            <div class="Column1">
+            <div class="SundayTime">
                 <ul>
                     <h3>일요일</h3>            
                     <li>
@@ -43,8 +44,10 @@
                 </ul>
                 <p style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</p>
             </div>
+            </div>
             <br>
-            <div class="WednesdayTime Column2">
+            <div class="Column2"></div>
+            <div class="WednesdayTime">
                 <ul>
                 <h3>수요일</h3>
                 <li>
@@ -54,7 +57,7 @@
                 </ul>
             </div>
             <br>
-            <div class="DayBreakTime Column2">
+            <div class="DayBreakTime">
                 <ul>
                 <h3>평일 새벽</h3>
                 <li>
@@ -62,6 +65,7 @@
                     5:30 AM  
                 </li>
                 </ul>
+            </div>
             </div>
             </div>
         </main>
