--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                     <button class="dropbtn">성장</button>
                     <div class="dropdown_content">
                         <a href="#"> ㅇㅅㅇ </a>
+                        <a href="#"> ㅎㅅㅎ </a>
+                        <a href="#"> ㅋㅅㅋ </a>
                     </div>
                 </div>
                 <div class="dropdown info">
