--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -21,7 +21,7 @@
             <br>
             <br>
             <div class="TimeRow">
-            <div class="Column1">
+            <div class="Column">
             <div class="SundayTime">
                 <ul>
                     <h3>일요일</h3>            
@@ -46,7 +46,7 @@
             </div>
             </div>
             <br>
-            <div class="Column2"></div>
+            <div class="Column"></div>
             <div class="WednesdayTime">
                 <ul>
                 <h3>수요일</h3>
