--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -4,6 +4,7 @@
         <title>예배안내 - 김해시민교회</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="style_worshipguide.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
     </head>
