--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -46,6 +46,7 @@
                         
                     </div>
                 </div>
+            <br> 
             <br>
                 <div class="Column">
                     <div class="WednesdayTime">
@@ -66,7 +67,7 @@
                             5:30 AM  
                         </li>
                         </ul>
-                    <p style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</p>
+                    <p class="caution" style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</p>
                     </div>
                 </div>
             </div>
