--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -67,7 +67,7 @@
                             5:30 AM  
                         </li>
                         </ul>
-                    <p class="caution" style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</p>
+                    <div class="caution" style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</div>
                     </div>
                 </div>
             </div>
