--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -67,7 +67,8 @@
                             5:30 AM  
                         </li>
                         </ul>
-                    <div class="caution" style="font-size: 9px;">*예배 30분 전부터 준비 찬송합니다.*</div>
+                    <br><br>
+                    <div class="caution" style="font-size: 12px;"> [*: 예배 30분 전부터 준비 찬송합니다.]</div>
                     </div>
                 </div>
             </div>
