--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         <a href="#"> ㅇㅅㅇ </a>
                         <a href="#"> ㅎㅅㅎ </a>
                         <a href="#"> ㅋㅅㅋ </a>
+                        <a href="#"> ㅋㅅㅋ </a>
                     </div>
                 </div>
                 <div class="dropdown info">
