--- a/index.html
+++ b/index.html
@@ -130,12 +130,6 @@
                         <h3>SUPPORT</h3>
                         <ul>
                             <li>
-                                <a href="#">다운로드</a>
-                            </li>
-                            <li>
-                                <a href="#">메뉴얼</a>
-                            </li>
-                            <li>
                                 <a href="#">자주 묻는 질문</a>
                             </li>
                             <li>
@@ -150,13 +144,7 @@
                                 <a href="#">공지사항</a>
                             </li>
                             <li>
-                                <a href="#">비즈니스</a>
-                            </li>
-                            <li>
-                                <a href="#">프로필</a>
-                            </li>
-                            <li>
-                                <a href="#">개발자</a>
+                                <a href="https://gimhaesimin.netlify.app/developer">개발자</a>
                             </li>
                             <li>
                                 <a href="#">블로그</a>
