add footer map link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <li>
                                 <a href="#">주소</a>
                             </li>
-                            <li><a href="#">지도</a>
+                            <li><a href="https://gimhaesimin.netlify.app/church/map">지도</a>
                             </li>
                             <li>
                                 <a href="#">스태프</a>
