--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <a href="#">공지사항</a>
                             </li>
                             <li>
-                                <a href="https://gimhaesimin.netlify.app/developer">개발자</a>
+                                <a href="https://gimhaesimin.netlify.app/dev/developer">개발자</a>
                             </li>
                             <li>
                                 <a href="#">블로그</a>
