--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="img/logo_header.svg">
                 </a>
             </div>
-            <div class="navbar">
+            <div class="navbar-left">
                 <div class="dropdown service">
                     <button class="dropbtn">예배</button>
                     <div class="dropdown_content">
@@ -74,6 +74,11 @@
                     </div>
                 </div>
             </div>
+            <div class="navbar-right">
+                <img src="/img/search1.svg">
+                <img src="/img/menu1.svg">
+            </div>
+
         </div>
         
         <div>
