--- a/dev/developer.html
+++ b/dev/developer.html
@@ -6,7 +6,7 @@
 
     <body>
         <div class="btn">
-            <a href="#" id="Kim">김유신</a>
+            <a href="https://asgard.netlify.app" id="Kim">김유신</a>
             <a href="https://doseobujang.netlify.app" id="Lee">이원석</a>
         </div>
     </body>
