--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
                 <div class="dropdown strive">
                     <button class="dropbtn">성장</button>
                     <div class="dropdown_content">
-                        <a href="#"> ㅇㅅㅇ </a>
+                        <a href="#"> 함께하는 교회 </a>
                         <a href="#"> ㅎㅅㅎ </a>
-                        <a href="#"> ㅋㅅㅋ </a>
                         <a href="#"> ㅋㅅㅋ </a>
                     </div>
                 </div>
@@ -64,6 +63,7 @@
                     <button class="dropbtn">교회</button>
                     <div class="dropdown_content">
                         <a href="#"> 신념 </a>
+                        <a href="#"> 섬기는 사람들 </a>
                         <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
                     </div>
                 </div>
