--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button class="dropbtn">성장</button>
                     <div class="dropdown_content">
                         <a href="#"> 함께하는 교회 </a>
-                        <a href="#"> ㅎㅅㅎ </a>
+                        <a href="#"> 도움되는 링크 </a>
                         <a href="#"> ㅋㅅㅋ </a>
                     </div>
                 </div>
