--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                     <button class="dropbtn">소통</button>
                     <div class="dropdown_content">
                         <a href="#"> 커뮤니티 </a>
+                        <a href="#"> 자주 묻는 질문 </a>
+                        <a href="#"> 문의 </a>
                     </div>
                 </div>
                 <div class="dropdown church">
