--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button class="dropbtn">예배</button>
                     <div class="dropdown_content">
                         <a href="#"> 라이브 </a>
+                        <a href="#"> 설교 </a>
                         <a href="https://gimhaesimin.netlify.app/worship/worship-guide"> 예배안내 </a>
                     </div>
                 </div>
@@ -49,6 +50,7 @@
                     <button class="dropbtn">자료</button>
                     <div class="dropdown_content">
                         <a href="#"> 설교 원고 </a>
+                        <a href="#"> 갤러리 </a>
                         <a href="#"> 도움되는 링크 </a>
                     </div>
                 </div>
