--- a/index.html
+++ b/index.html
@@ -17,6 +17,65 @@
         <script src="responsive_header.js"></script>
     </head>
     <body>
+        <!-- Side Menu -->
+        <div class="side-menu">
+
+            <div class="side_menu service">
+                예배
+                <ul>
+                    <li><a href="#"> 라이브 </a></li>
+                    <li><a href="#"> 설교 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/worship/worship-guide">
+                        예배안내
+                    </a></li>
+                </ul>
+            </div>
+
+            <div class="side_menu strive">
+                성장
+                <ul>
+                    <li><a href="#"> 함께하는 교회 </a></li>
+                </ul>
+            </div>
+
+            <div class="side_menu info">
+                자료
+                <ul>
+                <li><a href="#"> 설교 원고 </a></li>
+                <li><a href="#"> 갤러리 </a></li>
+                <li><a href="#"> 도움되는 링크 </a></li>
+                </ul>
+            </div>
+
+            <div class="side_menu education">
+                교육
+                <ul>
+                <li><a href="#"> 중고등부 </a></li>
+                </ul>
+                </div>
+            
+            <div class="side_menu communication">
+                소통
+                <ul>
+                <li><a href="#"> 커뮤니티 </a></li>
+                <li><a href="#"> 자주 묻는 질문 </a></li>
+                <li><a href="#"> 문의 </a></li>
+                </ul>
+            </div>
+
+            <div class="side_menu church">
+                교회
+                <ul>
+                <li><a href="#"> 신념 </a></li>
+                <li><a href="#"> 섬기는 사람들 </a></li>
+                <li><a href="https://gimhaesimin.netlify.app/church/map"></li>
+                    오시는 길
+                </a></li>
+                </ul>
+            </div>
+        </div>
+
+
         <!--Top Header-->
         <header>
             <div class="top-header">
@@ -108,64 +167,6 @@
                 <input type="button" class="menu" onclick="">
             </div>
         </div>
-
-        <div class="side-menu">
-
-            <div class="side_menu service">
-                예배
-                <ul>
-                    <li><a href="#"> 라이브 </a></li>
-                    <li><a href="#"> 설교 </a></li>
-                    <li><a href="https://gimhaesimin.netlify.app/worship/worship-guide">
-                        예배안내
-                    </a></li>
-                </ul>
-            </div>
-
-            <div class="side_menu strive">
-                성장
-                <ul>
-                    <li><a href="#"> 함께하는 교회 </a></li>
-                </ul>
-            </div>
-
-            <div class="side_menu info">
-                자료
-                <ul>
-                <li><a href="#"> 설교 원고 </a></li>
-                <li><a href="#"> 갤러리 </a></li>
-                <li><a href="#"> 도움되는 링크 </a></li>
-                </ul>
-            </div>
-
-            <div class="side_menu education">
-                교육
-                <ul>
-                <li><a href="#"> 중고등부 </a></li>
-                </ul>
-                </div>
-            
-            <div class="side_menu communication">
-                소통
-                <ul>
-                <li><a href="#"> 커뮤니티 </a></li>
-                <li><a href="#"> 자주 묻는 질문 </a></li>
-                <li><a href="#"> 문의 </a></li>
-                </ul>
-            </div>
-
-            <div class="side_menu church">
-                교회
-                <ul>
-                <li><a href="#"> 신념 </a></li>
-                <li><a href="#"> 섬기는 사람들 </a></li>
-                <li><a href="https://gimhaesimin.netlify.app/church/map"></li>
-                    오시는 길
-                </a></li>
-                </ul>
-            </div>
-        </div>
-
 
 
 
