--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
     <head>
         <title>김해시민교회</title>
         <meta charset="UTF-8" />
-        <link
-            rel="stylesheet"
-            href="style.css"
-            media="screen and (max-width: 768px)"
-        />
-        <link
-            rel="stylesheet"
-            href="larger-screen-style.css"
-            media="screen and (min-width: 769px)"
-        />
-        <link rel="icon" href="img/logo_head.svg" />
-        <script src="responsive_header.js"></script>
+        <link rel="stylesheet" href="style.css" media="screen and(max-width: 768px)"/>
+        <link rel="stylesheet" href="larger-screen-style.css" media="screen and (min-width: 769px)"/>
+        <link rel="icon" href="img/logo_head.svg"/>
+        <script src="sideMenu.js"></script>
     </head>
     <body>
         <!-- Side Menu -->
@@ -40,36 +32,34 @@
             <div class="side_menu info">
                 자료
                 <ul>
-                <li><a href="#"> 설교 원고 </a></li>
-                <li><a href="#"> 갤러리 </a></li>
-                <li><a href="#"> 도움되는 링크 </a></li>
+                    <li><a href="#"> 설교 원고 </a></li>
+                    <li><a href="#"> 갤러리 </a></li>
+                    <li><a href="#"> 도움되는 링크 </a></li>
                 </ul>
             </div>
 
             <div class="side_menu education">
                 교육
                 <ul>
-                <li><a href="#"> 중고등부 </a></li>
+                    <li><a href="#"> 중고등부 </a></li>
                 </ul>
                 </div>
             
             <div class="side_menu communication">
                 소통
                 <ul>
-                <li><a href="#"> 커뮤니티 </a></li>
-                <li><a href="#"> 자주 묻는 질문 </a></li>
-                <li><a href="#"> 문의 </a></li>
+                    <li><a href="#"> 커뮤니티 </a></li>
+                    <li><a href="#"> 자주 묻는 질문 </a></li>
+                    <li><a href="#"> 문의 </a></li>
                 </ul>
             </div>
 
             <div class="side_menu church">
                 교회
                 <ul>
-                <li><a href="#"> 신념 </a></li>
-                <li><a href="#"> 섬기는 사람들 </a></li>
-                <li><a href="https://gimhaesimin.netlify.app/church/map"></li>
-                    오시는 길
-                </a></li>
+                    <li><a href="#"> 신념 </a></li>
+                    <li><a href="#"> 섬기는 사람들 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a></li>
                 </ul>
             </div>
         </div>
@@ -82,17 +72,9 @@
                     <div class="inner-left">
                         <a
                             href="https://gimhaesimin.netlify.app/worship/worship-guide"
-                            >예배안내</a
-                        >
-                        <a href="https://gimhaesimin.netlify.app/church/map"
-                            >오시는 길</a
-                        ><a
-                            href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj"
-                            class="youtube"
-                            target="_blank"
-                            title="시민교회 유튜브"
-                            >유튜브</a
-                        >
+                            >예배안내</a>
+                        <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
+                        <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
                     </div>
                     <div class="inner-right">
                         <a href="#">로그인</a>
@@ -115,9 +97,7 @@
                     <div class="dropdown_content">
                         <a href="#"> 라이브 </a>
                         <a href="#"> 설교 </a>
-                        <a
-                            href="https://gimhaesimin.netlify.app/worship/worship-guide"
-                        >
+                        <a href="https://gimhaesimin.netlify.app/worship/worship-guide">
                             예배안내
                         </a>
                     </div>
@@ -155,21 +135,15 @@
                     <div class="dropdown_content">
                         <a href="#"> 신념 </a>
                         <a href="#"> 섬기는 사람들 </a>
-                        <a href="https://gimhaesimin.netlify.app/church/map">
-                            오시는 길
-                        </a>
+                        <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
                     </div>
                 </div>
             </div>
             <div class="navbar-right">
                 <img src="img/search1.svg" />
-                <input type="button" class="menu" onclick="">
+                <input type="button" class="menu" onclick="Show.sideMenu()">
             </div>
         </div>
-
-
-
-
 
         <div>
             <p>교회~</p>
@@ -185,30 +159,19 @@
                         <br />
                         연락처: 055-323-0691
                         <br />
-                        <a href="https://gimhaesimin.netlify.app/"
-                            >https://gimhaesimin.netlify.app/</a
-                        >
+                        <a href="https://gimhaesimin.netlify.app/">https://gimhaesimin.netlify.app/</a>
                     </p>
                     <nav class="footD">
                         <h3>SNS</h3>
                         <ul>
                             <li>
-                                <a
-                                    href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj"
-                                    target="_blank"
-                                    title="youtube"
-                                    ><img src="img/youtube.svg"
-                                /></a>
+                                <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" target="_blank" title="youtube"><img src="img/youtube.svg"/></a>
                             </li>
                             <li>
-                                <a href="#" target="_blank" title="blog"
-                                    ><img src="img/blog.svg"
-                                /></a>
+                                <a href="#" target="_blank" title="blog"><img src="img/blog.svg"/></a>
                             </li>
                             <li>
-                                <a href="#" target="_blank" title="instagram"
-                                    ><img src="img/instagram.svg"
-                                /></a>
+                                <a href="#" target="_blank" title="instagram"><img src="img/instagram.svg"/></a>
                             </li>
                         </ul>
                     </nav>
@@ -224,10 +187,7 @@
                                 <a href="#">주소</a>
                             </li>
                             <li>
-                                <a
-                                    href="https://gimhaesimin.netlify.app/church/map"
-                                    >지도</a
-                                >
+                                <a href="https://gimhaesimin.netlify.app/church/map">지도</a>
                             </li>
                             <li>
                                 <a href="#">스태프</a>
@@ -252,10 +212,7 @@
                                 <a href="#">공지사항</a>
                             </li>
                             <li>
-                                <a
-                                    href="https://gimhaesimin.netlify.app/dev/developer"
-                                    >개발자</a
-                                >
+                                <a href="https://gimhaesimin.netlify.app/dev/developer">개발자</a>
                             </li>
                             <li>
                                 <a href="#">블로그</a>
