--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css" media="screen and(max-width: 768px)"/>
         <link rel="stylesheet" href="larger-screen-style.css" media="screen and (min-width: 769px)"/>
         <link rel="icon" href="img/logo_head.svg"/>
-        <script src="sideMenu.js"></script>
+        <!-- <script src="sideMenu.js"></script> -->
     </head>
     <body>
         <!-- Side Menu -->
