--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css" media="screen and(max-width: 768px)"/>
         <link rel="stylesheet" href="larger-screen-style.css" media="screen and (min-width: 769px)"/>
         <link rel="icon" href="img/logo_head.svg"/>
-        <script src="sideMenu.js"></script>
+        <!-- <script src="sideMenu.js"></script> -->
     </head>
     <body>
         <!-- Side Menu -->
@@ -141,7 +141,7 @@
             </div>
             <div class="navbar-right">
                 <img src="img/search1.svg" />
-                <input type="button" class="menu" onclick="Show.sideMenu()">
+                <input type="button" class="menu" onclick="">
             </div>
         </div>
 
