--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -10,6 +10,9 @@
     </head>
     <body>
 
+        <!-- SideMenu -->
+        <script>Write.SideMenu();</script>
+
         <!-- Header -->
         <script>Write.Header();</script>
 
