--- a/Worship/Worship-guide.html
+++ b/Worship/Worship-guide.html
@@ -3,7 +3,9 @@
     <head>
         <title>예배안내 - 김해시민교회</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../style.css" media="screen and (max-width:768px)"/>
+        <link rel="stylesheet" href="../larger-screen-style.css" media="screen and (min-width:769px)"/>
+        <script src="../sideMenu.js"></script>
         <link rel="stylesheet" href="style_worshipguide.css">
         <link rel="icon" href="img/logo_head.svg">
         <script src="../pageView.js"></script>
