--- a/index.html
+++ b/index.html
@@ -14,51 +14,49 @@
             <div class="side_menu service">
                 예배
                 <ul>
-                    <li><a href="#"> 라이브 </a></li>
-                    <li><a href="#"> 설교 </a></li>
-                    <li><a href="https://gimhaesimin.netlify.app/worship/worship-guide">
-                        예배안내
-                    </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/service/live"> 라이브 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/service/service"> 설교 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/service/worship-guide"> 예배안내 </a></li>
                 </ul>
             </div>
 
             <div class="side_menu strive">
                 성장
                 <ul>
-                    <li><a href="#"> 함께하는 교회 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/strive/supported_church"> 함께하는 교회 </a></li>
                 </ul>
             </div>
 
             <div class="side_menu info">
                 자료
                 <ul>
-                    <li><a href="#"> 설교 원고 </a></li>
-                    <li><a href="#"> 갤러리 </a></li>
-                    <li><a href="#"> 도움되는 링크 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/info/service_script"> 설교 원고 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/info/gallery"> 갤러리 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/info/helpfullinks"> 도움되는 링크 </a></li>
                 </ul>
             </div>
 
             <div class="side_menu education">
                 교육
                 <ul>
-                    <li><a href="#"> 중고등부 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/education/teen_team"> 중고등부 </a></li>
                 </ul>
                 </div>
             
             <div class="side_menu communication">
                 소통
                 <ul>
-                    <li><a href="#"> 커뮤니티 </a></li>
-                    <li><a href="#"> 자주 묻는 질문 </a></li>
-                    <li><a href="#"> 문의 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/communication/community"> 커뮤니티 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/communication/FAQ"> 자주 묻는 질문 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/communication/contactus"> 문의 </a></li>
                 </ul>
             </div>
 
             <div class="side_menu church">
                 교회
                 <ul>
-                    <li><a href="#"> 신념 </a></li>
-                    <li><a href="#"> 섬기는 사람들 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/church/belief"> 신념 </a></li>
+                    <li><a href="https://gimhaesimin.netlify.app/church/helpers"> 섬기는 사람들 </a></li>
                     <li><a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a></li>
                 </ul>
             </div>
@@ -71,7 +69,7 @@
                 <div class="top-header">
                     <div class="inner">
                         <div class="inner-left">
-                            <a href="https://gimhaesimin.netlify.app/worship/worship-guide">예배안내</a>
+                            <a href="https://gimhaesimin.netlify.app/service/worship-guide">예배안내</a>
                             <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
                             <a href="https://youtube.com/@coh.s?si=zNhjSBaVsbcJDfhj" class="youtube" target="_blank" title="시민교회 유튜브">유튜브</a>
                         </div>
@@ -94,44 +92,44 @@
                     <div class="dropdown service">
                         <button class="dropbtn">예배</button>
                         <div class="dropdown_content">
-                            <a href="#"> 라이브 </a>
-                            <a href="#"> 설교 </a>
-                            <a href="https://gimhaesimin.netlify.app/worship/worship-guide">예배안내</a>
+                            <a href="https://gimhaesimin.netlify.app/service/live"> 라이브 </a>
+                            <a href="https://gimhaesimin.netlify.app/service/service"> 설교 </a>
+                            <a href="https://gimhaesimin.netlify.app/service/worship-guide">예배안내</a>
                         </div>
                     </div>
                     <div class="dropdown strive">
                         <button class="dropbtn">성장</button>
                         <div class="dropdown_content">
-                            <a href="#"> 함께하는 교회 </a>
+                            <a href="https://gimhaesimin.netlify.app/strive/supported_church"> 함께하는 교회 </a>
                         </div>
                     </div>
                     <div class="dropdown info">
                         <button class="dropbtn">자료</button>
                         <div class="dropdown_content">
-                            <a href="#"> 설교 원고 </a>
-                            <a href="#"> 갤러리 </a>
-                            <a href="#"> 도움되는 링크 </a>
+                            <a href="https://gimhaesimin.netlify.app/info/service_script"> 설교 원고 </a>
+                            <a href="https://gimhaesimin.netlify.app/info/gallery"> 갤러리 </a>
+                            <a href="https://gimhaesimin.netlify.app/info/helpfullinks"> 도움되는 링크 </a>
                         </div>
                     </div>
                     <div class="dropdown education">
                         <button class="dropbtn">교육</button>
                         <div class="dropdown_content">
-                            <a href="#"> 중고등부 </a>
+                            <a href="https://gimhaesimin.netlify.app/education/teen_team"> 중고등부 </a>
                         </div>
                     </div>
                     <div class="dropdown communication">
                         <button class="dropbtn">소통</button>
                         <div class="dropdown_content">
-                            <a href="#"> 커뮤니티 </a>
-                            <a href="#"> 자주 묻는 질문 </a>
-                            <a href="#"> 문의 </a>
+                            <a href="https://gimhaesimin.netlify.app/communication/community"> 커뮤니티 </a>
+                            <a href="https://gimhaesimin.netlify.app/communication/FAQ"> 자주 묻는 질문 </a>
+                            <a href="https://gimhaesimin.netlify.app/communication/contactus"> 문의 </a>
                         </div>
                     </div>
                     <div class="dropdown church">
                         <button class="dropbtn">교회</button>
                         <div class="dropdown_content">
-                            <a href="#"> 신념 </a>
-                            <a href="#"> 섬기는 사람들 </a>
+                            <a href="https://gimhaesimin.netlify.app/church/belief"> 신념 </a>
+                            <a href="https://gimhaesimin.netlify.app/church/helpers"> 섬기는 사람들 </a>
                             <a href="https://gimhaesimin.netlify.app/church/map"> 오시는 길 </a>
                         </div>
                     </div>
@@ -167,9 +165,6 @@
                                 <li>
                                     <a href="#" target="_blank" title="blog"><img src="img/blog.svg"/></a>
                                 </li>
-                                <li>
-                                    <a href="#" target="_blank" title="instagram"><img src="img/instagram.svg"/></a>
-                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -178,16 +173,13 @@
                             <h3>ABOUT</h3>
                             <ul>
                                 <li>
-                                    <a href="#">설립</a>
-                                </li>
-                                <li>
-                                    <a href="#">주소</a>
+                                    <a href="https://gimhaesimin.netlify.app/about/address">주소</a>
                                 </li>
                                 <li>
                                     <a href="https://gimhaesimin.netlify.app/church/map">지도</a>
                                 </li>
                                 <li>
-                                    <a href="#">스태프</a>
+                                    <a href="https://gimhaesimin.netlify.app/about/staff">스태프</a>
                                 </li>
                             </ul>
                         </div>
@@ -195,10 +187,10 @@
                             <h3>SUPPORT</h3>
                             <ul>
                                 <li>
-                                    <a href="#">자주 묻는 질문</a>
+                                    <a href="https://gimhaesimin.netlify.app/communication/FAQ">자주 묻는 질문</a>
                                 </li>
                                 <li>
-                                    <a href="#">문의</a>
+                                    <a href="https://gimhaesimin.netlify.app/communication/contactus">문의</a>
                                 </li>
                             </ul>
                         </div>
@@ -206,7 +198,7 @@
                             <h3>CONTENTS</h3>
                             <ul>
                                 <li>
-                                    <a href="#">공지사항</a>
+                                    <a href="https://gimhaesimin.netlify.app/contents/inform.html">공지사항</a>
                                 </li>
                                 <li>
                                     <a href="https://gimhaesimin.netlify.app/dev/developer">개발자</a>
