--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="height: 100%; width: 100%">
+<html >
     <head>
         <title>김해시민교회</title>
         <meta charset="UTF-8"/>
