--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html >
+<html>
     <head>
         <title>김해시민교회</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8"/>
         <link rel="icon" href="img/logo_head.svg"/>
         <link rel="stylesheet" href="style.css" media="screen and (max-width:768px)"/>
