--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>김해시민교회</title>
         <meta charset="UTF-8"/>
+        <!-- 기기에 따라 달라지는 장치의 화면 너비에 맞게 웹 페이지의 너비를 설정. 또한, "initial-scale=1.0" 부분은 브라우저에 의해 웹 페이지가 처음으로 로드될 때 초기 확대/축소 레벨을 설정 -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img/logo_head.svg"/>
         <!-- Bootstrap CSS file -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -10,5 +12,36 @@
     <body>
         <!-- Bootstrap JavaScript file (안 쓰면 지워도 됨)-->
         <script src="js/bootstrap.bundle.min.js"></script>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <!-- md >= 768px -->
+                    <div class="col-md-5">
+                        <div class="row row-cols-1">
+                            <div class="col">
+                                FootA
+                            </div>
+                            <div class="col">
+                                FootB
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="col-md-4">
+                                About
+                            </div>
+                            <div class="col-md-4">
+                                Support
+                            </div>
+                            <div class="col-md-4">
+                                Contents
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
